--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-  <link rel="manifest" href="assets/favicon/site.webmanifest">
-  <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/imgursoyjean/image/upload/v1537503015/mis-favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/imgursoyjean/image/upload/v1537503035/mis-favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/imgursoyjean/image/upload/v1537503034/mis-favicon/favicon-16x16.png">
+  <link rel="manifest" href="https://res.cloudinary.com/imgursoyjean/raw/upload/v1537503082/mis-favicon/site.webmanifest">
+  <link rel="mask-icon" href="https://res.cloudinary.com/imgursoyjean/image/upload/v1537503081/mis-favicon/safari-pinned-tab.svg"
+    color="#5bbad5">
   <meta name="apple-mobile-web-app-title" content="Mooltripakdee International School">
   <meta name="application-name" content="Mooltripakdee International School">
   <meta name="msapplication-TileColor" content="#da532c">
@@ -40,7 +41,8 @@
     <div class="container">
       <div class="row d-flex flex-fill">
         <div class="col-md-1 col-lg-1 col-sm-2">
-          <img class="desktop-logo" src="images/mis-logo.png" alt="">
+          <img class="desktop-logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/mis-logo.png"
+            alt="">
         </div>
         <div class="col-md-7 col-lg-7 col-sm-4">
           <h5>
@@ -172,17 +174,20 @@
           </a>
         </div>
         <div class="carousel-item active">
-          <img role="img" class="d-block header-image" src="images/website 01.jpg" alt="First slide">
+          <img role="img" class="d-block header-image" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496815/mis/mis-homepage/website_01.jpg"
+            alt="First slide">
           <!-- <div class="carousel-caption">
             <h5>Student/Teacher of the week</h5>
             <p>from left: John Smith - Year 1/1, Mr. Warren Buffett - Year 8</p>
           </div> -->
         </div>
         <div class="carousel-item">
-          <img role="img" class="d-block header-image" src="images/website 02.jpg" alt="Sixth slide">
+          <img role="img" class="d-block header-image" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496814/mis/mis-homepage/website_02.jpg"
+            alt="Sixth slide">
         </div>
         <div class="carousel-item">
-          <img role="img" class="d-block header-image" src="images/website 03.jpg" alt="Third slide">
+          <img role="img" class="d-block header-image" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496834/mis/mis-homepage/website_03.jpg"
+            alt="Third slide">
         </div>
       </div>
       <!-- <a class="carousel-control-prev" href="#header-carousel" role="button" data-slide="prev">
@@ -201,7 +206,8 @@
   <main role="main">
     <section class="container card-grid">
       <figure>
-        <img src="images/2kids-reading.jpg" alt="two kids reading a book">
+        <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496761/mis/mis-homepage/2kids-reading.jpg"
+          alt="two kids reading a book">
         <figcaption>
           <h4>Year 3 Students</h4>
           <blockquote>
@@ -212,7 +218,7 @@
       </figure>
 
       <div class="card-event">
-        <img src="images/football.jpeg" alt="">
+        <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496765/mis/mis-homepage/football.jpg" alt="">
         <div class="event-date">
           <div>SEP</div>
           <p>17</p>
@@ -226,7 +232,7 @@
       </div>
 
       <figure>
-        <img src="images/Mr-Mark.JPG" alt="School Principal's speech on the stage">
+        <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496829/mis/mis-homepage/Mr-Mark.jpg" alt="School Principal's speech on the stage">
         <figcaption>
           <h4>Principal's Graduation Speech</h4>
           <blockquote>
@@ -238,7 +244,7 @@
       </figure>
 
       <figure>
-        <img src="images/library.jpg" alt="Teacher reading a book to his student">
+        <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496791/mis/mis-homepage/library.jpg" alt="Teacher reading a book to his student">
         <figcaption>
           <h4>Journey of a Future Bookworm</h4>
           <blockquote>
@@ -250,7 +256,7 @@
       </figure>
 
       <div class="card-event">
-        <img src="images/football.jpeg" alt="">
+        <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496765/mis/mis-homepage/football.jpg" alt="">
         <div class="event-date">
           <div>SEP</div>
           <p>18</p>
@@ -264,7 +270,7 @@
       </div>
 
       <figure>
-        <img src="images/Mr-Craig.jpg" alt="Mr. Craig Jenkins storytelling to the students">
+        <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496800/mis/mis-homepage/Mr-Craig.jpg" alt="Mr. Craig Jenkins storytelling to the students">
         <figcaption>
           <h4>Mr. Craig's Charismatic Storytelling</h4>
           <blockquote>
@@ -332,7 +338,8 @@
     <div id="showcase" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="images/girl-reading.jpg" alt="First slide">
+          <img class="d-block w-100" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496792/mis/mis-homepage/girl-reading.jpg"
+            alt="First slide">
           <div class="carousel-caption d-none d-md-block">
             <div class="container">
               <div class="showcase-description">
