--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </a>
         </div>
         <div class="carousel-item active">
-          <img role="img" class="d-block header-image" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496815/mis/mis-homepage/website_01.jpg"
+          <img role="img" class="d-block header-image parallax" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496815/mis/mis-homepage/website_01.jpg"
             alt="First slide">
           <!-- <div class="carousel-caption">
             <h5>Student/Teacher of the week</h5>
@@ -337,42 +337,75 @@
 
     <div id="showcase" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner">
+
         <div class="carousel-item active">
-          <img class="d-block w-100" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496792/mis/mis-homepage/girl-reading.jpg"
+          <img class="d-block w-100 showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496792/mis/mis-homepage/girl-reading.jpg"
             alt="First slide">
           <div class="carousel-caption d-none d-md-block">
-            <div class="container">
-              <div class="showcase-description">
-                <p>School Library</p>
-                <h1>Relax &amp; Read</h1>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
-              </div>
+            <div class="text-box">
+              <span class="showcase-main">Enjoy solitude reading</span>
+              <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span>
+              <span class="showcase-location">School Library</span>
             </div>
           </div>
         </div>
-        <!-- <div class="carousel-item">
-          <img class="d-block w-100" src="images/arial-shot.jpeg" alt="Second slide">
+
+        <div class="carousel-item">
+          <img class="d-block w-100 showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496844/mis/mis-homepage/arial-shot.jpg"
+            alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
-            <div class="d-flex flex-column">
-              <h5>...</h5>
-              <p>...</p>
+            <div class="text-box">
+              <span class="showcase-main">100 Acres of MIS</span>
+              <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span>
+              <span class="showcase-location">Arial Shot</span>
             </div>
           </div>
         </div>
+
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/pool.jpeg" alt="Second slide">
+          <img class="d-block w-100 showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/pool.jpg"
+            alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
-            <h5>...</h5>
-            <p>...</p>
+            <div class="text-box">
+              <span class="showcase-main">Enjoy with your Friends</span>
+              <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span>
+              <span class="showcase-location">Indoor Pool</span>
+            </div>
           </div>
         </div>
+
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/building.jpeg" alt="Second slide">
+          <img class="d-block w-100 showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496801/mis/mis-homepage/building.jpg"
+            alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
-            <h5>...</h5>
-            <p>...</p>
+            <div class="text-box">
+              <span class="showcase-main">Meet up on the Quad</span>
+              <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span>
+              <span class="showcase-location">The Quad</span>
+            </div>
           </div>
-        </div> -->
+        </div>
+
+        <div class="carousel-item">
+          <img class="d-block w-100 showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496826/mis/mis-homepage/reading.jpg"
+            alt="Second slide">
+          <div class="carousel-caption d-none d-md-block">
+            <div class="text-box">
+              <span class="showcase-main">Relaxing by the Park</span>
+              <span class="showcase-sub">in a wonderful outdoor setting to study and socialize</span>
+              <span class="showcase-location">Calming Environment</span>
+            </div>
+          </div>
+        </div>
+
+        <a class="carousel-control-prev" href="#showcase" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#showcase" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
 
@@ -483,7 +516,10 @@
   <hr>
   <!-- Optional JavaScript -->
   <script>
-    $('.carousel').carousel()
+    $('#header-carousel').carousel({
+      interval: 2000
+    });
+    $('#showcase').carousel();
   </script>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
