--- a/index.html
+++ b/index.html
@@ -37,124 +37,74 @@
 </head>
 
 <body>
-  <div class="navbar d-none d-md-block">
-    <div class="container">
-      <div class="row d-flex flex-fill">
-        <div class="col-md-1 col-lg-1 col-sm-2">
-          <img class="desktop-logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/mis-logo.png"
-            alt="">
-        </div>
-        <div class="col-md-7 col-lg-7 col-sm-4">
-          <h5>
-            Mooltripakdee
-            <br> International
-            <br> School
-            <br>
-          </h5>
-        </div>
+  <nav class="container">
+    <div class="fixed-navbar">
+      <span>
+        <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/mis-logo.png"
+          alt="">
+      </span>
+      <!-- Button trigger modal -->
+      <!-- <a class="btn" data-toggle="modal" data-target="#enquiryForm" href="#">Enquiry</a> -->
 
-        <div class="col-md-2 col-lg-2 col-sm-3">
-          <i class="fas fa-phone-volume"></i> 038.249759, 60-61
-          <br>
-          <i class="fas fa-envelope"></i> admin@mis.ac.th
-          <br>
-          <i class="fab fa-facebook-square fa-2x"></i>
-          <i class="fab fa-instagram fa-2x"></i>
-          <i class="fab fa-youtube fa-2x"></i>
-          <i class="fab fa-google-plus-g fa-2x"></i>
-        </div>
-        <div class="col-md-2 col-lg-2 col-sm-3">
-
-          <!-- Button trigger modal -->
-          <button type="button" role="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#enquiryForm">
-            Admissions Enquiry
-          </button>
-
-          <!-- Modal -->
-          <div class="modal" id="enquiryForm" tabindex="-1" role="dialog" aria-labelledby="enquiryForm" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title">Enquiry Form</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
+      <!-- Modal -->
+      <div class="modal" id="enquiryForm" tabindex="-1" role="dialog" aria-labelledby="enquiryForm" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Enquiry Form</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Please fill in the short form below and one of our dedicated admissions team
+                will get back to
+                you
+                within
+                24 hours (local time, Monday to Friday). We look forward to answering all
+                of your questions.</p>
+              <form>
+                <label aria-label="Parent's Details">
+                  <h4>Your Details</h4>
+                </label>
+                <div class="form-group">
+                  <label for="exampleFullName" hidden></label>
+                  <input type="text" class="form-control" id="exampleFullName" aria-describedby="fullName" placeholder="Enter your full name">
                 </div>
-                <div class="modal-body">
-                  <p>Please fill in the short form below and one of our dedicated admissions team
-                    will get back to
-                    you
-                    within
-                    24 hours (local time, Monday to Friday). We look forward to answering all
-                    of your questions.</p>
-                  <form>
-                    <label aria-label="Parent's Details">
-                      <h4>Your Details</h4>
-                    </label>
-                    <div class="form-group">
-                      <label for="exampleFullName" hidden></label>
-                      <input type="text" class="form-control" id="exampleFullName" aria-describedby="fullName"
-                        placeholder="Enter your full name">
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleInputEmail1" hidden></label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="Enter email">
-                      <small id="emailHelp" class="form-text text-muted">We'll never share
-                        your email with anyone
-                        else.</small>
-                    </div>
-                    <hr>
-                    <div class="form-group">
-                      <label for="exampleFormControlTextarea1" class="form-text text-muted" hidden></label>
-                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Is there anything else you'd like to tell us?"></textarea>
-                    </div>
-                    <div class="form-group form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <small>
-                        <label class="form-check-label text-muted" for="exampleCheck1"></label>
-                        By ticking this box, you are accepting our
-                        <a href="https://www.iubenda.com/privacy-policy/63134805/legal" target="_blank" rel="noopener noreferrer"
-                          title="Privacy Policy">&nbsp;Privacy
-                          &amp; Cookie Policy</a> and giving us your permission
-                        to
-                        use this information which
-                        may be regarded as direct marketing in relation to our school.
-                      </small>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit Enquiry</button>
-                  </form>
+                <div class="form-group">
+                  <label for="exampleInputEmail1" hidden></label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    placeholder="Enter email">
+                  <small id="emailHelp" class="form-text text-muted">We'll never share
+                    your email with anyone
+                    else.</small>
                 </div>
-              </div>
+                <hr>
+                <div class="form-group">
+                  <label for="exampleFormControlTextarea1" class="form-text text-muted" hidden></label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Is there anything else you'd like to tell us?"></textarea>
+                </div>
+                <div class="form-group form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <small>
+                    <label class="form-check-label text-muted" for="exampleCheck1"></label>
+                    By ticking this box, you are accepting our
+                    <a href="https://www.iubenda.com/privacy-policy/63134805/legal" target="_blank" rel="noopener noreferrer"
+                      title="Privacy Policy">&nbsp;Privacy
+                      &amp; Cookie Policy</a> and giving us your permission
+                    to
+                    use this information which
+                    may be regarded as direct marketing in relation to our school.
+                  </small>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit Enquiry</button>
+              </form>
             </div>
           </div>
-          <!-- End of Modal -->
-
-          <!-- Search button -->
-          <input class="form-control topbar-search" type="search" placeholder="Search" aria-label="Search">
         </div>
       </div>
-    </div>
-  </div>
-  <nav role="navigation" class="navbar navbar-expand-lg navbar-expand-md navbar-light">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <div class="navbar-nav d-inline-flex flex-row flex-wrap align-content-center justify-content-around w-100">
-          <!-- <a class="nav-item nav-link current-page" href="#">Home
-        <span class="sr-only">(current)</span>
-      </a> -->
-          <a class="nav-item nav-link" href="#">Our School</a>
-          <a class="nav-item nav-link" href="#">Academics</a>
-          <a class="nav-item nav-link" href="#">Admission</a>
-          <a class="nav-item nav-link" href="#">Our Team</a>
-          <a class="nav-item nav-link" href="#">Events</a>
-          <a class="nav-item nav-link" href="#">Contact Us</a>
-        </div>
-      </div>
+      <!-- End of Modal -->
+      </span>
     </div>
   </nav>
 
@@ -162,42 +112,43 @@
 
     <!-- Carousel -->
     <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="text-overlay text-center">
-          <h1>What makes MIS&nbsp;<strong>Great</strong>&nbsp;?</h1>
-          <hr>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, quis praesentium omnis est
-            asperiores
-            corporis nemo magnam architecto! Quidem neque facere perferendis dicta repudiandae hic!</p>
-          <a href="#" role="button" class="btn btn-lg btn-success">
-            Enroll Now
-          </a>
-        </div>
-        <div class="carousel-item active">
-          <img role="img" class="d-block header-image parallax" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496815/mis/mis-homepage/website_01.jpg"
-            alt="First slide">
-          <!-- <div class="carousel-caption">
+      <div class="tint">
+        <div class="carousel-inner">
+          <div class="text-overlay text-center">
+            <h1>What makes MIS&nbsp;<strong><mark>Great</mark></strong>&nbsp;?</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, quis praesentium omnis est
+              asperiores
+              corporis nemo magnam architecto! Quidem neque facere perferendis dicta repudiandae hic!</p>
+            <a href="#" role="button" class="btn btn-lg btn-success">
+              Enroll Now
+            </a>
+          </div>
+          <div class="carousel-item active">
+            <img role="img" class="d-block header-image" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496815/mis/mis-homepage/website_01.jpg"
+              alt="First slide">
+            <!-- <div class="carousel-caption">
             <h5>Student/Teacher of the week</h5>
             <p>from left: John Smith - Year 1/1, Mr. Warren Buffett - Year 8</p>
           </div> -->
+          </div>
+          <div class="carousel-item">
+            <img role="img" class="d-block header-image-offset" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496814/mis/mis-homepage/website_02.jpg"
+              alt="Sixth slide">
+          </div>
+          <div class="carousel-item">
+            <img role="img" class="d-block header-image" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496834/mis/mis-homepage/website_03.jpg"
+              alt="Third slide">
+          </div>
         </div>
-        <div class="carousel-item">
-          <img role="img" class="d-block header-image" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496814/mis/mis-homepage/website_02.jpg"
-            alt="Sixth slide">
-        </div>
-        <div class="carousel-item">
-          <img role="img" class="d-block header-image" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496834/mis/mis-homepage/website_03.jpg"
-            alt="Third slide">
-        </div>
+        <a class="carousel-control-prev" href="#header-carousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#header-carousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      <!-- <a class="carousel-control-prev" href="#header-carousel" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#header-carousel" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-    </a> -->
     </div>
     <!-- End of Carousel -->
 
