--- a/index.html
+++ b/index.html
@@ -40,9 +40,18 @@
   <nav class="container">
     <div class="fixed-navbar">
       <span>
-        <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/mis-logo.png"
-          alt="">
+        <a href="#">
+          <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/mis-logo.png"
+            alt="">
+        </a>
       </span>
+      <span class="logo-name">Mooltripakdee International School</span>
+      <a href="#" class="btn btn-outline-success navbar-link">Our School</a>
+      <a href="#" class="btn btn-outline-success navbar-link">Academics</a>
+      <a href="#" class="btn btn-outline-success navbar-link">Admissions</a>
+      <a href="#" class="btn btn-outline-success navbar-link">Events</a>
+      <a href="#" class="btn btn-outline-success navbar-link">Our Team</a>
+      <a href="#" class="btn btn-outline-success navbar-link">Contact Us</a>
       <!-- Button trigger modal -->
       <!-- <a class="btn" data-toggle="modal" data-target="#enquiryForm" href="#">Enquiry</a> -->
 
@@ -112,43 +121,38 @@
 
     <!-- Carousel -->
     <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
-      <div class="tint">
-        <div class="carousel-inner">
-          <div class="text-overlay text-center">
-            <h1>What makes MIS&nbsp;<strong><mark>Great</mark></strong>&nbsp;?</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, quis praesentium omnis est
-              asperiores
-              corporis nemo magnam architecto! Quidem neque facere perferendis dicta repudiandae hic!</p>
-            <a href="#" role="button" class="btn btn-lg btn-success">
-              Enroll Now
-            </a>
-          </div>
-          <div class="carousel-item active">
-            <img role="img" class="d-block header-image" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496815/mis/mis-homepage/website_01.jpg"
-              alt="First slide">
-            <!-- <div class="carousel-caption">
+      <div class="carousel-inner">
+        <div class="text-overlay text-center">
+          <h1>What makes MIS&nbsp;<strong><mark>Great</mark></strong>&nbsp;?</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, quis praesentium omnis est
+            asperiores
+            corporis nemo magnam architecto! Quidem neque facere perferendis dicta repudiandae hic!</p>
+        </div>
+        <div class="carousel-item active">
+          <img role="img" class="d-block header-image" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496815/mis/mis-homepage/website_01.jpg"
+            alt="First slide">
+          <!-- <div class="carousel-caption">
             <h5>Student/Teacher of the week</h5>
             <p>from left: John Smith - Year 1/1, Mr. Warren Buffett - Year 8</p>
           </div> -->
-          </div>
-          <div class="carousel-item">
-            <img role="img" class="d-block header-image-offset" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496814/mis/mis-homepage/website_02.jpg"
-              alt="Sixth slide">
-          </div>
-          <div class="carousel-item">
-            <img role="img" class="d-block header-image" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496834/mis/mis-homepage/website_03.jpg"
-              alt="Third slide">
-          </div>
         </div>
-        <a class="carousel-control-prev" href="#header-carousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#header-carousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+        <div class="carousel-item">
+          <img role="img" class="d-block header-image-offset" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496814/mis/mis-homepage/website_02.jpg"
+            alt="Sixth slide">
+        </div>
+        <div class="carousel-item">
+          <img role="img" class="d-block header-image" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496834/mis/mis-homepage/website_03.jpg"
+            alt="Third slide">
+        </div>
       </div>
+      <a class="carousel-control-prev" href="#header-carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#header-carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
     <!-- End of Carousel -->
 
@@ -373,16 +377,14 @@
       </div>
     </div> -->
 
-
-    <!-- calendar & google map -->
-    <!-- <section class="container d-flex justify-content-around">
-      <iframe src="https://calendar.google.com/calendar/b/3/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=300&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=mooltripakdeeinternational%40gmail.com&amp;color=%231B887A&amp;ctz=Asia%2FBangkok"
-        style="border-width:0" width="48%" height="500" frameborder="0" scrolling="no"></iframe>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d701.4275154945535!2d100.9496553948097!3d12.947720157346337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x881c7da4aac3f719!2sMIS+International+School!5e1!3m2!1sen!2sth!4v1537263483572"
-        width="48%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </section> -->
-
-    <div class="container">
+    <div class="three-links">
+      <div class="container flex-links">
+        <a href="#">Enquire</a>
+        <a href="#">Enroll Now</a>
+        <a href="#">Book a visit</a>
+      </div>
+    </div>
+    <!-- <div class="container">
       <div class="btn-group btn-group-toggle d-flex" data-toggle="buttons">
         <label class="btn btn-lg btn-secondary flex-fill">
           <input type="radio" name="options" id="option1" autocomplete="off" checked>Inquire
@@ -394,7 +396,7 @@
           <input type="radio" name="options" id="option3" autocomplete="off">Book a visit
         </label>
       </div>
-    </div>
+    </div> -->
     <hr>
   </main>
 
