--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 </head>
 
 <body>
+  <div class="tint">
   <nav class="container">
     <div class="fixed-navbar">
       <span>
@@ -116,6 +117,7 @@
       </span>
     </div>
   </nav>
+  </div>
 
   <header role="banner">
 
@@ -131,10 +133,6 @@
         <div class="carousel-item active">
           <img role="img" class="d-block header-image" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496815/mis/mis-homepage/website_01.jpg"
             alt="First slide">
-          <!-- <div class="carousel-caption">
-            <h5>Student/Teacher of the week</h5>
-            <p>from left: John Smith - Year 1/1, Mr. Warren Buffett - Year 8</p>
-          </div> -->
         </div>
         <div class="carousel-item">
           <img role="img" class="d-block header-image-offset" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496814/mis/mis-homepage/website_02.jpg"
@@ -145,11 +143,11 @@
             alt="Third slide">
         </div>
       </div>
-      <a class="carousel-control-prev" href="#header-carousel" role="button" data-slide="prev">
+      <a class="carousel-control-prev z-index-4" href="#header-carousel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#header-carousel" role="button" data-slide="next">
+      <a class="carousel-control-next z-index-4" href="#header-carousel" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
