--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -22,15 +21,12 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/scss/main.css">
+  <link rel="stylesheet" href="assets/scss/layout.css">
+  <link rel="stylesheet" href="assets/scss/homepage.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
-  <!-- Google Font -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700" rel="stylesheet"> -->
-
   <title>Welcome &vert; Mooltripakdee International School</title>
-
   <!-- cookiebot consent banner -->
   <!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="889c84d8-1246-4048-b06c-b4cb9c1dfef1" type="text/javascript"
   async></script> -->
@@ -38,85 +34,27 @@
 
 <body>
   <div class="tint">
-  <nav class="container">
-    <div class="fixed-navbar">
-      <span>
-        <a href="#">
-          <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/mis-logo.png"
-            alt="">
-        </a>
-      </span>
-      <span class="logo-name">Mooltripakdee International School</span>
-      <a href="#" class="btn btn-outline-success navbar-link">Our School</a>
-      <a href="#" class="btn btn-outline-success navbar-link">Academics</a>
-      <a href="#" class="btn btn-outline-success navbar-link">Admissions</a>
-      <a href="#" class="btn btn-outline-success navbar-link">Events</a>
-      <a href="#" class="btn btn-outline-success navbar-link">Our Team</a>
-      <a href="#" class="btn btn-outline-success navbar-link">Contact Us</a>
-      <!-- Button trigger modal -->
-      <!-- <a class="btn" data-toggle="modal" data-target="#enquiryForm" href="#">Enquiry</a> -->
+    <nav class="container">
+      <div class="fixed-navbar">
+        <span>
+          <a href="#">
+            <img class="logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/mis-logo.png"
+              alt="">
+          </a>
+        </span>
+        <span class="logo-name">Mooltripakdee International School</span>
+        <a href="our-school" class="btn btn-outline-success navbar-link">Our School</a>
+        <a href="#" class="btn btn-outline-success navbar-link">Academics</a>
+        <a href="#" class="btn btn-outline-success navbar-link">Admissions</a>
+        <a href="#" class="btn btn-outline-success navbar-link">Events</a>
+        <a href="#" class="btn btn-outline-success navbar-link">Our Team</a>
+        <a href="#" class="btn btn-outline-success navbar-link">Contact Us</a>
+        <!-- Button trigger modal -->
+        <!-- <a class="btn" data-toggle="modal" data-target="#enquiryForm" href="#">Enquiry</a> -->
 
-      <!-- Modal -->
-      <div class="modal" id="enquiryForm" tabindex="-1" role="dialog" aria-labelledby="enquiryForm" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Enquiry Form</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <p>Please fill in the short form below and one of our dedicated admissions team
-                will get back to
-                you
-                within
-                24 hours (local time, Monday to Friday). We look forward to answering all
-                of your questions.</p>
-              <form>
-                <label aria-label="Parent's Details">
-                  <h4>Your Details</h4>
-                </label>
-                <div class="form-group">
-                  <label for="exampleFullName" hidden></label>
-                  <input type="text" class="form-control" id="exampleFullName" aria-describedby="fullName" placeholder="Enter your full name">
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputEmail1" hidden></label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                    placeholder="Enter email">
-                  <small id="emailHelp" class="form-text text-muted">We'll never share
-                    your email with anyone
-                    else.</small>
-                </div>
-                <hr>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1" class="form-text text-muted" hidden></label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Is there anything else you'd like to tell us?"></textarea>
-                </div>
-                <div class="form-group form-check">
-                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                  <small>
-                    <label class="form-check-label text-muted" for="exampleCheck1"></label>
-                    By ticking this box, you are accepting our
-                    <a href="https://www.iubenda.com/privacy-policy/63134805/legal" target="_blank" rel="noopener noreferrer"
-                      title="Privacy Policy">&nbsp;Privacy
-                      &amp; Cookie Policy</a> and giving us your permission
-                    to
-                    use this information which
-                    may be regarded as direct marketing in relation to our school.
-                  </small>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit Enquiry</button>
-              </form>
-            </div>
-          </div>
-        </div>
+        </span>
       </div>
-      <!-- End of Modal -->
-      </span>
-    </div>
-  </nav>
+    </nav>
   </div>
 
   <header role="banner">
@@ -382,19 +320,6 @@
         <a href="#">Book a visit</a>
       </div>
     </div>
-    <!-- <div class="container">
-      <div class="btn-group btn-group-toggle d-flex" data-toggle="buttons">
-        <label class="btn btn-lg btn-secondary flex-fill">
-          <input type="radio" name="options" id="option1" autocomplete="off" checked>Inquire
-        </label>
-        <label class="btn btn-lg btn-secondary flex-fill">
-          <input type="radio" name="options" id="option2" autocomplete="off">Enroll Now
-        </label>
-        <label class="btn btn-lg btn-secondary flex-fill">
-          <input type="radio" name="options" id="option3" autocomplete="off">Book a visit
-        </label>
-      </div>
-    </div> -->
   </main>
 
   <footer>
@@ -425,6 +350,66 @@
               data-target="#enquiryForm">
               Admissions Enquiry
             </button>
+
+            <!-- Modal -->
+            <div class="modal" id="enquiryForm" tabindex="-1" role="dialog" aria-labelledby="enquiryForm" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title">Enquiry Form</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <p>Please fill in the short form below and one of our dedicated admissions team
+                      will get back to
+                      you
+                      within
+                      24 hours (local time, Monday to Friday). We look forward to answering all
+                      of your questions.</p>
+                    <form>
+                      <label aria-label="Parent's Details">
+                        <h4>Your Details</h4>
+                      </label>
+                      <div class="form-group">
+                        <label for="exampleFullName" hidden></label>
+                        <input type="text" class="form-control" id="exampleFullName" aria-describedby="fullName"
+                          placeholder="Enter your full name">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleInputEmail1" hidden></label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                          placeholder="Enter email">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share
+                          your email with anyone
+                          else.</small>
+                      </div>
+                      <hr>
+                      <div class="form-group">
+                        <label for="exampleFormControlTextarea1" class="form-text text-muted" hidden></label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Is there anything else you'd like to tell us?"></textarea>
+                      </div>
+                      <div class="form-group form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <small>
+                          <label class="form-check-label text-muted" for="exampleCheck1"></label>
+                          By ticking this box, you are accepting our
+                          <a href="https://www.iubenda.com/privacy-policy/63134805/legal" target="_blank" rel="noopener noreferrer"
+                            title="Privacy Policy">&nbsp;Privacy
+                            &amp; Cookie Policy</a> and giving us your permission
+                          to
+                          use this information which
+                          may be regarded as direct marketing in relation to our school.
+                        </small>
+                      </div>
+                      <button type="submit" class="btn btn-outline-secondary">Submit Enquiry</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- End of Modal -->
 
             <a href="#" class="btn btn-sm btn-outline-secondary" role="button" aria-pressed="true">Map/Directions</a>
           </span>
@@ -464,13 +449,6 @@
     </div>
   </footer>
   <hr>
-  <!-- Optional JavaScript -->
-  <script>
-    $('#header-carousel').carousel({
-      interval: 2000
-    });
-    $('#showcase').carousel();
-  </script>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -478,6 +456,14 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+
+  <!-- Optional JavaScript -->
+  <script>
+    $('#header-carousel').carousel({
+      interval: 5000
+    });
+    $('#showcase').carousel();
+  </script>
 
   <!-- <script id="CookieDeclaration" src="https://consent.cookiebot.com/889c84d8-1246-4048-b06c-b4cb9c1dfef1/cd.js" type="text/javascript"
   async></script> -->
