--- a/events/index.html
+++ b/events/index.html
@@ -44,12 +44,12 @@
         </span>
         <span class="logo-name">Mooltripakdee International School</span>
         <a href=".." class="btn btn-outline-success navbar-link">Home</a>
-        <a href="#" class="current-page">Our School</a>
+        <a href="../our-school" class="btn btn-outline-success navbar-link">Our School</a>
         <a href="../academics" class="btn btn-outline-success navbar-link">Academics</a>
         <a href="../admissions" class="btn btn-outline-success navbar-link">Admissions</a>
         <a href="../events" class="btn btn-outline-success navbar-link">Events</a>
         <a href="../our-team" class="btn btn-outline-success navbar-link">Our Team</a>
-        <a href="../contact-us" class="btn btn-outline-success navbar-link">Contact Us</a>
+        <a href="#" class="current-page">Contact Us</a>
         <!-- Button trigger modal -->
         <!-- <a class="btn" data-toggle="modal" data-target="#enquiryForm" href="#">Enquiry</a> -->
         </span>
