--- a/our-team/index.html
+++ b/our-team/index.html
@@ -48,11 +48,10 @@
         <a href="../academics" class="btn btn-outline-success navbar-link">Academics</a>
         <a href="../admissions" class="btn btn-outline-success navbar-link">Admissions</a>
         <a href="../events" class="btn btn-outline-success navbar-link">Events</a>
-        <a href="../our-team" class="btn btn-outline-success navbar-link">Our Team</a>
-        <a href="#" class="current-page">Contact Us</a>
+        <a href="#" class="current-page">Our Team</a>
+        <a href="../contact-us" class="btn btn-outline-success navbar-link">Contact Us</a>
         <!-- Button trigger modal -->
         <!-- <a class="btn" data-toggle="modal" data-target="#enquiryForm" href="#">Enquiry</a> -->
-        </span>
       </div>
     </nav>
   </div>
