--- a/academics/index.html
+++ b/academics/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -33,7 +34,7 @@
 </head>
 
 <body>
-  <div class="tint">
+  <div class="subpage-tint">
     <nav class="container">
       <div class="fixed-navbar">
         <span>
@@ -56,11 +57,32 @@
     </nav>
   </div>
 
-  <header role="banner">
+  <header class="sub-header-image">
+    <figure>
+        <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1538105409/mis/mis-ourschool/subject-building.jpg" alt="">
+      <figcaption class="container">
+        <span class="sub-header-location">Subject Building</span>
+      </figcaption>
+    </figure>
 
   </header>
 
   <main role="main">
+    <article class="container">
+      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ex architecto velit aperiam
+        reprehenderit impedit.</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint unde sapiente eius non magnam at reprehenderit
+        perferendis. Necessitatibus officiis qui fugit possimus vel quae facere illo, neque aliquam iste, voluptas,
+        quidem amet. Harum voluptatum adipisci ex veniam facere exercitationem laborum excepturi necessitatibus ut
+        nostrum veritatis dolorum, incidunt aperiam voluptates! Magnam architecto a assumenda vero? Doloremque iste
+        corporis enim earum provident optio mollitia asperiores, dicta reiciendis molestias ipsum. Deserunt, eaque et
+        aperiam tenetur, ut ullam tempora hic voluptatibus sit, laudantium vero accusantium esse rerum? Voluptate ullam
+        id odit possimus, ea soluta officia autem ratione recusandae repellat aperiam, harum delectus porro deleniti.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum hic reiciendis voluptates id fugiat quae omnis
+        sint quis, ullam, recusandae unde iste nulla debitis optio.</p>
+
+    </article>
+
 
     <div class="three-links">
       <div class="container flex-links">
