--- a/events/index.html
+++ b/events/index.html
@@ -60,7 +60,7 @@
 
   <header class="sub-header-image">
     <figure>
-        <img src="../img/school-compressed.jpg" alt="">
+        <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1538105409/mis/mis-ourschool/subject-building.jpg" alt="">
       <figcaption class="container">
         <span class="sub-header-location">Subject Building</span>
       </figcaption>
