--- a/our-team/index.html
+++ b/our-team/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -21,7 +22,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="../assets/scss/layout.css">
+  <link rel="stylesheet" href="../assets/css/layout.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
@@ -33,7 +34,7 @@
 </head>
 
 <body>
-  <div class="tint">
+  <div class="subpage-tint">
     <nav class="container">
       <div class="fixed-navbar">
         <span>
@@ -56,12 +57,18 @@
     </nav>
   </div>
 
-  <header role="banner">
+  <header class="sub-header-image">
+    <figure>
+      <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1538105409/mis/mis-ourschool/subject-building.jpg"
+        alt="">
+      <figcaption class="container">
+        <span class="sub-header-location">Subject Building</span>
+      </figcaption>
+    </figure>
 
   </header>
 
   <main role="main">
-
     <div class="three-links">
       <div class="container flex-links">
         <a href="#">Enquire</a>
