--- a/our-school/index.html
+++ b/our-school/index.html
@@ -60,7 +60,8 @@
 
   <header class="sub-header-image">
     <figure>
-        <img src="../img/school-compressed.jpg" alt="">
+      <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1538105409/mis/mis-ourschool/subject-building.jpg"
+        alt="">
       <figcaption class="container">
         <span class="sub-header-location">Subject Building</span>
       </figcaption>
@@ -69,21 +70,66 @@
   </header>
 
   <main role="main">
-    <article class="container">
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ex architecto velit aperiam
-        reprehenderit impedit.</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint unde sapiente eius non magnam at reprehenderit
-        perferendis. Necessitatibus officiis qui fugit possimus vel quae facere illo, neque aliquam iste, voluptas,
-        quidem amet. Harum voluptatum adipisci ex veniam facere exercitationem laborum excepturi necessitatibus ut
-        nostrum veritatis dolorum, incidunt aperiam voluptates! Magnam architecto a assumenda vero? Doloremque iste
-        corporis enim earum provident optio mollitia asperiores, dicta reiciendis molestias ipsum. Deserunt, eaque et
-        aperiam tenetur, ut ullam tempora hic voluptatibus sit, laudantium vero accusantium esse rerum? Voluptate ullam
-        id odit possimus, ea soluta officia autem ratione recusandae repellat aperiam, harum delectus porro deleniti.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum hic reiciendis voluptates id fugiat quae omnis
-        sint quis, ullam, recusandae unde iste nulla debitis optio.</p>
+    <article class="container grid-container">
+      <section class="carousel-img">
+        <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="https://source.unsplash.com/random/400x201" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://source.unsplash.com/random/400x202" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://source.unsplash.com/random/400x203" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </section>
 
+      <section class="welcome">
+        <h1>School's Welcome</h1>
+        <p><b>Mooltripakdee International School(MIS)</b> is a new and developing International School that offers
+          Quality Education to children between 2 and 15 years of age.</p>
+        <p>MIS Preschool & Kindergarten (for children between 2 and 5 years old) combine the Early Year Foundation
+          Stage
+          of the English National Curriculum with Montessori methodology.</p>
+        <p>MIS primary school (children between 5 and 11 years old) is based wholly on the English National Curriculum.
+          MIS secondary school (children aged between 11 and 15 years old) will be a continuation of the English
+          National
+          Curriculum taught by qualified subject teachers.</p>
+        <p>Set in beautiful grounds, MIS is located on a quiet and peaceful site in the countryside just a few
+          kilometers
+          away from central Pattaya along the Chaiyapornvitee Road near Mabprachan Lake</p>
+        Sincerely<br>
+        School Management
+      </section>
+
+      <section>
+        <h2>History</h2>
+        <p>Mooltripakdee International School opened its doors to students on 25th August 2010. The school was built
+          and
+          designed by Ms Wiravan Mooltripakdee (Ms Wee). Her vision was to build on the success of our then sister
+          school
+          - MCCI, a Montessori school, located at Naklua Soi 16 - by offering primary school education in addition to
+          Preschool and kindergarten. Unfortunately in July 2011, after twenty-two years operating as a school, MCCI
+          had
+          to close due to the lease on the land expiring. MCCI teachers and the remaining students amalgamated with MIS
+          in August 2011.</p>
+        <h4>The Present and the Future</h4>
+        <p>Presently, the school has over 600 students. Our student population is made up of children from several
+          countries. We anticipate that our student numbers will increase to around 700 for next school year beginning
+          August 2018.</p>
+      </section>
     </article>
-
 
     <div class="three-links">
       <div class="container flex-links">
